# vrchat.py

./: .pylintrc  pyproject.toml
vrchat/client/: __init__.py  client.py
vrchat/entity/: user.py
vrchat/gateway/: login.py
vrchat/interfaces/: login.py
